crates/rehearse/tests/ui/operation/fail/duplicate_context.stderr
error: `#[operation]` supports at most one `#[context]` parameter
  --> tests/ui/operation/fail/duplicate_context.rs:12:16
   |
12 |     #[context] second: &Services,
   |                ^^^^^^
